Fixed navbar spacing across screensizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,27 @@ input[type=submit] {
         max-width: 769px;
         margin: 0 auto;
         clear: both;
+    }
+    header {
+            background: #fff;
+            margin: 0 0 30px;
+            z-index: 10;
+            color: #fff;
+            overflow: auto;
+            border-bottom: 2px solid #ccc;
+            position: fixed;
+            width: 100%;
+    }
+
 }
 
+
 @media screen and (max-width: 768px) {
+    
+    nav {
+        float: left;
+    }
+
     #MainContainer {
         width: 100%;
      }  
@@ -261,6 +279,11 @@ input[type=submit] {
     header {
         position: static;
     }
+
+    nav {
+        float: left;
+    }
+
     #logo {
         width: 100%;
     }
